crates/caelix-macros/tests/ui/injectable_rejects_tuple_struct.stderr
error: #[injectable] only supports named-field or unit structs
 --> tests/ui/injectable_rejects_tuple_struct.rs:6:1
  |
6 | struct Service(std::sync::Arc<Repo>);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
