crates/caelix-macros/tests/ui/injectable_rejects_tuple_struct.rs
use caelix_macros::injectable;

struct Repo;

#[injectable]
struct Service(std::sync::Arc<Repo>);

fn main() {}
